Bug #6451 failing create table givers "ghost" tables which are impossible to remove
Submitted: 5 Nov 2004 6:12 Modified: 8 Nov 2004 12:50
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:4.1.8 bk OS:Any (any)
Assigned to: Jonas Oreland Target Version:

[5 Nov 2004 6:12] Tomas Ulin
Description:
mysql> CREATE TABLE `popmail` (
    ->        `id` varchar(255) NOT NULL default '',
    ->        `bytes` varchar(255) default NULL,
    ->        `message` longtext,
    ->        PRIMARY KEY  (`id`),
    ->        UNIQUE KEY `PRI` (`id`)
    ->      ) TYPE=NDBCLUSTER;
ERROR 1005 (HY000): Can't create table './test/popmail.frm' (errno: 738)

a ndb_show_tables show afterwards

28    UserTable            Online   Yes     test         def      popmail

trying to remove the table fails...

ndb_drop_table -d test popmail
Dropping table popmail...
709: No such table existed

NDBT_ProgramExit: 1 - Failed

How to repeat:
CREATE TABLE `popmail` (
       `id` varchar(255) NOT NULL default '',
       `bytes` varchar(255) default NULL,
       `message` longtext,
       PRIMARY KEY  (`id`),
       UNIQUE KEY `PRI` (`id`)
     ) TYPE=NDBCLUSTER;