sql/ha_ndbcluster.cc
@@ -3307,7 +3307,7 @@ int ha_ndbcluster::create(const char *name,
 {
   NDBTAB tab;
   NDBCOL col;
-  uint pack_length, length, i;
+  uint pack_length, length, i, pk_length= 0;
   const void *data, *pack_data;
   const char **key_names= form->keynames.type_names;
   char name2[FN_HEADLEN];
@@ -3354,6 +3354,8 @@ int ha_ndbcluster::create(const char *name,
     if ((my_errno= create_ndb_column(col, field, info)))
       DBUG_RETURN(my_errno);
     tab.addColumn(col);
+    if(col.getPrimaryKey())
+      pk_length += (field->pack_length() + 3) / 4;
   }
   
   // No primary key, create shadow key as 64 bit, auto increment  
@@ -3367,6 +3369,39 @@ int ha_ndbcluster::create(const char *name,
     col.setPrimaryKey(TRUE);
     col.setAutoIncrement(TRUE);
     tab.addColumn(col);
+    pk_length += 2;
+  }
+  
+  // Make sure that blob tables don't have to big part size
+  for (i= 0; i < form->fields; i++) 
+  {
+    /**
+     * The extra +7 concists
+     * 2 - words from pk in blob table
+     * 5 - from extra words added by tup/dict??
+     */
+    switch (form->field[i]->real_type()) {
+    case MYSQL_TYPE_BLOB:    
+    case MYSQL_TYPE_MEDIUM_BLOB:   
+    case MYSQL_TYPE_LONG_BLOB: 
+    {
+      NdbDictionary::Column * col = tab.getColumn(i);
+      int size = pk_length + (col->getPartSize()+3)/4 + 7;
+      if(size > NDB_MAX_TUPLE_SIZE_IN_WORDS && 
+	 (pk_length+7) < NDB_MAX_TUPLE_SIZE_IN_WORDS)
+      {
+	size = NDB_MAX_TUPLE_SIZE_IN_WORDS - pk_length - 7;
+	col->setPartSize(4*size);
+      }
+      /**
+       * If size > NDB_MAX and pk_length+7 >= NDB_MAX
+       *   then the table can't be created anyway, so skip
+       *   changing part size, and have error later
+       */ 
+    }
+    default:
+      break;
+    }
   }
   
   if ((my_errno= check_ndb_connection()))
